overflow fix and searchModal

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,6 @@
+body {
+  overflow:hidden;
+}
 #root{
   max-width: 960px;
   margin: 0 auto;
