--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -115,60 +115,19 @@
     margin-top: 10px;
     padding-top: 20px;
 }
-
 @media only screen and (max-width: 600px) {
 
-    .no-scroll .react-autosuggest__container{
-        position: fixed;
-        padding-top:170px;
-        top: 0;
-        left: 0;
-        z-index: 1050;
-        width: 100%;
-        height: 100%;
-        overflow: hidden;
-        outline: 0;
-        background-color:#ffffff !important;
-    }
+.searchModal .modal-content{
+    background-color:#ffffff;
+}
 
-    .no-scroll {
-        position: fixed;
-        top: 0;
-        left: 0;
-        right: 0;
-        bottom: 0;
-        overflow: hidden; 
-        -webkit-overflow-scrolling: touch;
-    }
-    .no-scroll .voiceIcon{
-        display:none;
-    }
-    .no-scroll .site-logo{
-        display:none;
-    }
-    .no-scroll .skip-nav-container{
-        display:none;
-    }
-    .no-scroll .navContainer{
-        display:none;
-    }
-    .no-scroll .exampleCases{
-        display:none;
-    }
-
-   .react-autosuggest__suggestions-container--open{
-        border:0;
-        height:100vh;
-    }
-
-    .react-autosuggest__suggestions-list{
-        top: 0;
-        left: 0;
-        z-index: 1050;
-        width: 100%;
-        height: 100%;
-        overflow: hidden;
-        outline: 0;
+ .react-autosuggest__suggestions-container{
+        position: absolute;
+        top: 30px;
+        left:0;
+        width: 100vw;
+        box-shadow: none;
+        background:transparent;
     }
 
     .react-autosuggest__suggestions-list li{
@@ -201,7 +160,7 @@
         color: black;
         border-color: #979797;
         border-width: 5px;
-        border-radius: 35px 35px 5px 35px;
+        border-radius: 35px;
         padding: 1em;
         margin: 0.5em;
         font-size: 14px;
